objects/Order_Line_Item_Allocation__c.object
<CustomObject>
    <fields>
        <fullName>Order1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Order Line Item Allocations</relationshipLabel>
        <relationshipName>Order_Line_Item_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line Item</label>
        <referenceTo>Order_Line_Item__c</referenceTo>
        <relationshipLabel>Order Line Item Allocations</relationshipLabel>
        <relationshipName>Order_Line_Item_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Shipping_Location__c</fullName>
        <label>Order Shipping Location</label>
        <referenceTo>Account_Order_Address__c</referenceTo>
        <relationshipLabel>Order Line Item Allocations</relationshipLabel>
        <relationshipName>Order_Line_Item_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Order Line Item Allocations</relationshipLabel>
        <relationshipName>Order_Line_Item_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Charge_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? To store associated PureCloud quote product for line item allocation
Downstream Impact? N/A
Which department is owner? IT</description>
        <label>Quote Charge Detail</label>
        <referenceTo>zqu__QuoteChargeDetail__c</referenceTo>
        <relationshipLabel>Order Line Item Allocations</relationshipLabel>
        <relationshipName>Order_Line_Item_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Product</label>
        <referenceTo>BigMachines__Quote_Product__c</referenceTo>
        <relationshipLabel>Order Line Item Allocations</relationshipLabel>
        <relationshipName>Order_Line_Item_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? To store associated PureCloud quote rate plan charge for line item allocation 
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Quote Rate Plan Charge</label>
        <referenceTo>zqu__QuoteRatePlanCharge__c</referenceTo>
        <relationshipLabel>Order Line Item Allocations</relationshipLabel>
        <relationshipName>Order_Line_Item_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>BigMachines__Quote__c</referenceTo>
        <relationshipLabel>Order Line Item Allocations</relationshipLabel>
        <relationshipName>Order_Line_Item_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? To store associated PureCloud quote for line item allocation
Downstream Impact? N/A
Which department is owner? IT</description>
        <label>Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Order Line Item Allocations</relationshipLabel>
        <relationshipName>Order_Line_Item_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Line Item Allocation</label>
    <nameField>
        <label>Order Line Item Allocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Line Item Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>